[package]
name = "git-perf"
version = "0.15.5"
edition = "2021"
description = "Track, plot, and statistically validate simple measurements using git-notes for storage"
license = "MIT"
repository = "https://github.com/kaihowl/git-perf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
average = "0.13.1"
backoff = "0.4.0"
chrono = "0.4.39"
clap = { version="4", features=["derive", "wrap_help"] }
clap_mangen = "0.2.5"
criterion = "0.5.1"
defer = "0.2.1"
hex = "0.4.3"
itertools = "0.10.5"
plotly = "0.8.3"
rand = "0.8.5"
readable = "0.16.0"
serial_test = "3.2.0"
thiserror = "1.0.51"
toml = "0.8.6"
toml_edit = "0.20.4"
unindent = "0.2.3"

[dev-dependencies]
tempfile = "3.3.0"
httptest = "0.15.4"

[features]
vendored-openssl = []

[[bench]]
name = "read"
harness = false

[[bench]]
name = "add"
harness = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.7.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-musl"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]
