[mypy]

[metadata]
name = git-perf
version = attr: git_perf.__version__
author = Kai Hoewelmeyer
author_email = kai+gitperf@hoewelmeye.eu
description = Manage basic performance measurements through git-notes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kaihowl/git-perf
project_urls =
    Bug Tracker = https://github.com/kaihowl/git-perf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
install_requires =
  plotly
  pandas
  tabulate
  icecream
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  git-perf = git_perf.git_perf:main
