[package]
name = "git_perf_cli_types"
version = "0.2.1"
edition = "2021"
description = "Shared CLI types for git-perf"
repository = "https://github.com/kaihowl/git-perf"
license = "MIT"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4.42"
anyhow = "1.0.100"
