[package]
name = "git_perf_cli_types"
version = "0.5.0"
edition = "2021"
description = "Shared CLI types for git-perf"
repository = "https://github.com/kaihowl/git-perf"
license = "MIT"

[lints]
workspace = true

[dependencies]
clap = { version = "4.6", features = ["derive"] }
chrono = "0.4.44"
anyhow = "1.0.102"
