[package]
name = "git-perf"
version = "0.18.1"
edition = "2021"
description = "Track, plot, and statistically validate simple measurements using git-notes for storage"
license = "MIT"
repository = "https://github.com/kaihowl/git-perf"
build = "build.rs"

[lints]
workspace = true

[[bin]]
name = "git-perf"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
git_perf_cli_types = { version = "0.2.1", path = "../cli_types" }
anyhow = "1.0.75"
average = "0.13.1"
backoff = "0.4.0"
chrono = "0.4.39"
clap = { version="4", features=["derive", "wrap_help"] }
clap_mangen = "0.2.5"
defer = "0.2.1"
env_logger = "0.11.8"
hex = "0.4.3"
itertools = "0.10.5"
log = "0.4.27"
plotly = "0.13.5"
rand = "0.8.5"
readable = "0.16.0"
regex = "1"
sparklines = "0.3.0"
thiserror = "1.0.51"
toml = "0.8.6"
toml_edit = "0.20.4"
unindent = "0.2.3"
dirs-next = "2.0.0"
config = "0.14"
serde_json = "1"
fundu = "2"
bytesize = "1"
human-repr = "1"
quick-xml = { version = "0.36", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
tempfile = { version = "3.3.0", optional = true }

[build-dependencies]
clap = { version="4", features=["derive"] }
clap_mangen = "0.2.5"
clap-markdown = "0.1.0"
git_perf_cli_types = { version = "0.2.1", path = "../cli_types" }

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.3.0"
httptest = "0.15.4"

[features]
vendored-openssl = []
test-helpers = ["dep:tempfile"]

[[bench]]
name = "read"
harness = false
path = "benches/read.rs"
required-features = ["test-helpers"]

[[bench]]
name = "add"
harness = false
path = "benches/add.rs"
required-features = ["test-helpers"]

[[bench]]
name = "sample_ci_bench"
harness = false
path = "benches/sample_ci_bench.rs"

