[package]
name = "git-perf"
version = "0.18.3"
edition = "2021"
description = "Track, plot, and statistically validate simple measurements using git-notes for storage"
license = "MIT"
repository = "https://github.com/kaihowl/git-perf"
build = "build.rs"

[lints]
workspace = true

[[bin]]
name = "git-perf"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
git_perf_cli_types = { version = "0.3.0", path = "../cli_types" }
anyhow = "1.0.101"
average = "0.16.0"
backoff = "0.4.0"
chrono = "0.4.43"
clap = { version="4", features=["derive", "wrap_help"] }
clap_mangen = "0.2.31"
defer = "0.2.1"
env_logger = "0.11.8"
hex = "0.4.3"
itertools = "0.14.0"
log = "0.4.28"
plotly = "0.14.0"
rand = "0.9.2"
readable = "0.16.0"
regex = "1"
sparklines = "0.3.0"
thiserror = "2.0.18"
toml = "0.9.11"
toml_edit = "0.24.0"
unindent = "0.2.4"
dirs-next = "2.0.0"
config = "0.15"
serde_json = "1"
fundu = "2"
bytesize = "2"
human-repr = "1"
quick-xml = { version = "0.39", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
tempfile = { version = "3.24.0", optional = true }

[build-dependencies]
clap = { version="4", features=["derive"] }
clap_mangen = "0.2.31"
clap-markdown = "0.1.0"
git_perf_cli_types = { version = "0.3.0", path = "../cli_types" }

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3.24.0"
httptest = "0.16.4"
tokio = { version = "1", features = ["net"] }
glob_test = "0.1.0"

[features]
vendored-openssl = []
test-helpers = ["dep:tempfile"]

[[bench]]
name = "read"
harness = false
path = "benches/read.rs"
required-features = ["test-helpers"]

[[bench]]
name = "add"
harness = false
path = "benches/add.rs"
required-features = ["test-helpers"]

[[bench]]
name = "sample_ci_bench"
harness = false
path = "benches/sample_ci_bench.rs"

